# ai-sandbox-escape-detection

./: LEADERBOARD.md  README.md  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  test_case.md
examples/: run_against_gpt4.py
sandboxeval/: __init__.py  cli.py  report.py  runner.py  scorer.py
sandboxeval/tests/: __init__.py  capability_elicitation.py  information_leakage.py  self_preservation.py  shutdown_resistance.py
src/: alerter.ts  cli.ts  index.ts  monitor.ts  rules.ts
src/detectors/: filesystem.ts  network.ts  process.ts
tests/: monitor.test.ts  test_sandboxeval.py
